# ALPACA-model

./: .gitignore  LICENSE  README.md  conda-migration.md  environment.yml  pyproject.toml
alpaca/: ALPACA_model_class.py  ALPACA_segment_solution_class.py  __init__.py  __main__.py  analysis.py  make_configuration.py  plotting.py  plotting_helpers.py  scripts.py  utils.py
alpaca/resources/: __init__.py  hg19_chromosome_lengths.csv
alpaca/scripts/submodules/alpaca_input_formatting/: README.md  check_final_outputs.py  input_conversion.sh  r_object_io.py
alpaca/scripts/submodules/alpaca_input_formatting/convert_ascat_output/: convert_ascat_output.py  unpack_RDS_ascat_helper.R
alpaca/scripts/submodules/alpaca_input_formatting/convert_conipher_output/: convert_conipher_output.R  convert_conipher_output.py
alpaca/scripts/submodules/alpaca_input_formatting/convert_refphase_output/: convert_refphase.py  extract_rephase_data.py  functions.py
alpaca/solvers/: __init__.py  base.py  factory.py  gurobi_backend.py  pyomo_backend.py
dev/: parse_optional_args.py
examples/: run_example.sh
examples/example_cohort/input/LTX0000-Tumour1/: LTX0000-Tumour1-refphase-results.RData
tests/: test_convert_ascat.sh  test_convert_conipher.sh  test_extract_refphase.sh  test_input_conversion.sh  test_input_conversion_missing_samples.sh  test_newick_trees.py  test_output_all_solutions.sh  test_run_alpaca_X_chromosome.sh  test_run_alpaca_find_monoclonal_samples.sh  test_run_alpaca_infeasible_segment.sh  test_run_alpaca_newick_tree.sh  test_run_compare_solvers_complex_segment.sh  test_segment_solution_artifacts.py  test_solution_provided.sh  test_solver_factory.py
tests/compare_solvers/input/X0000_simple/: ALPACA_input_table.csv  ci_table.csv  cp_table.csv  tree_paths.json
tests/compare_solvers/input/X0001_average/: ci_table.csv  cp_table.csv  tree_paths.json
tests/compare_solvers/input/X0001_average/segments/: ALPACA_input_table_X0001-Tumour1_7_25268071_57529604.csv
tests/find_monoclonal_samples/input/LTX0000-Tumour1/: ALPACA_input_table.csv  cp_table.csv  tree_paths.json
tests/infeasible_segment/input/LTX0000-Tumour1/: ALPACA_input_table.csv  ci_table.csv  tree_paths.json
tests/missing_samples/input/LTX0000-Tumour1/: LTX0000-Tumour1-refphase-results.RData
tests/multi-tumour/input/LTX0000-Tumour1/: ALPACA_input_table.csv
tests/multi-tumour/input/LTX0001-Tumour1/: ALPACA_input_table.csv  ci_table.csv  cp_table.csv
tests/newick_tree/input/LTX0000-Tumour1/: cp_table.csv  tree_paths.nwk
tests/solution_provided/input/LTX0000-Tumour1/: ci_table.csv  diploid_solution.csv  tetraploid_solution.csv
tests/x_chromosome/input/LTX0000-Tumour1/: LTX0000-Tumour1-refphase-results.RData  LTX0000-Tumour1.tree.RDS  ci_table.csv
(+5 files in other folders)
