[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "alpaca"
dynamic = ["version"]
description = "Package for ALPACA model - Allele-specific Phylogenetic Analysis of Copy-number Aberrations"
authors = [{ name = "Piotr Pawlik"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gurobipy",
    "kneed",
    "kaleido",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "seaborn",
    "rdata",
    "tqdm",
    "pyomo",
]

[tool.hatch.build]
include = [
    "/alpaca",
    "/alpaca/submodules"
]
exclude = [
    ".*",
    "dev/",
    "tests/",
    "__pycache__/"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.dev.scripts]
debug-input = "python -m pdb -c continue -m alpaca.scripts input_conversion {args}"


[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
alpaca = "alpaca.__main__:main"
